--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Some Site</title>
+        <title>Canvas Simple Editor</title>
         <link href="css/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" defer src="js/jquery-3.1.1.min.js"></script>
